# process-control

./: README.md  index.html  package-lock.json  package.json
scripts/: generate-icons.mjs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  models.rs  runtime_ops.rs  state.rs  tray_app.rs
