[package]
name = "process-control"
version = "0.1.0"
description = "Menu bar app for managing common development ports"
authors = ["Enzo Spagnolli"]
edition = "2021"

[lib]
name = "process_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
notify = "6.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.3.1", features = ["tray-icon", "macos-private-api"] }
